<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_menu"
        android:icon="@drawable/sort"
        android:title="@string/trier"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/sort_creation"
                android:title="@string/creation_date"/>
            <item
                android:id="@+id/sort_schedule"
                android:title="@string/eta"/>
        </menu>
    </item>

    <item
        android:id="@+id/menu_generate"
        android:title="@string/generate"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete_all"/>

</menu>